stoppped date from shifting

--- a/000.css
+++ b/000.css
@@ -37,6 +37,10 @@ span {
   white-space: nowrap;
 }
 
+.datetime {
+  font-variant-numeric: tabular-nums;
+}
+
 /* =========================
    Sidebar
    ========================= */
